--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        //classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5' // Add this line
         classpath 'com.android.tools.build:gradle:2.3.0-beta3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5' // jitpack.io
     }
 }
 
@@ -19,7 +19,7 @@ allprojects {
         }
     }
     repositories {
-        mavenLocal()
+        //mavenLocal()
         jcenter()
     }
 }
